WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204202
[iOS] Audio capture fails when a track is unmuted
https://bugs.webkit.org/show_bug.cgi?id=204202
Summary
[iOS] Audio capture fails when a track is unmuted
Eric Carlson
Reported
2019-11-14 12:59:00 PST
Audio capture fails when a track is unmuted
Attachments
Patch
(7.58 KB, patch)
2019-11-14 13:08 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(8.88 KB, patch)
2019-11-14 15:06 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(7.66 KB, patch)
2019-11-15 14:49 PST
,
Eric Carlson
jer.noble
: review+
Details
Formatted Diff
Diff
Patch
(7.65 KB, patch)
2019-11-15 16:57 PST
,
Eric Carlson
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Oops
(7.64 KB, patch)
2019-11-15 19:40 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2019-11-14 12:59:26 PST
<
rdar://problem/57005820
>
Eric Carlson
Comment 2
2019-11-14 13:08:58 PST
Created
attachment 383571
[details]
Patch
Eric Carlson
Comment 3
2019-11-14 15:06:36 PST
Created
attachment 383575
[details]
Patch
youenn fablet
Comment 4
2019-11-14 15:52:17 PST
Comment on
attachment 383575
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=383575&action=review
> Source/WebCore/ChangeLog:9 > + Tested manually.
We now have assertions that would catch regressions in layout tests.
WebKit Commit Bot
Comment 5
2019-11-14 16:34:09 PST
Comment on
attachment 383575
[details]
Patch Clearing flags on attachment: 383575 Committed
r252470
: <
https://trac.webkit.org/changeset/252470
>
WebKit Commit Bot
Comment 6
2019-11-14 16:34:10 PST
All reviewed patches have been landed. Closing bug.
Eric Carlson
Comment 7
2019-11-15 14:49:14 PST
Reopening to attach new patch.
Eric Carlson
Comment 8
2019-11-15 14:49:14 PST
Created
attachment 383654
[details]
Patch
Eric Carlson
Comment 9
2019-11-15 16:57:40 PST
Created
attachment 383667
[details]
Patch
WebKit Commit Bot
Comment 10
2019-11-15 19:27:01 PST
Comment on
attachment 383667
[details]
Patch Rejecting
attachment 383667
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 383667, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Tools/ChangeLog contains OOPS!. Full output:
https://webkit-queues.webkit.org/results/13259814
Eric Carlson
Comment 11
2019-11-15 19:40:49 PST
Created
attachment 383683
[details]
Oops
WebKit Commit Bot
Comment 12
2019-11-15 20:13:48 PST
Comment on
attachment 383683
[details]
Oops Clearing flags on attachment: 383683 Committed
r252521
: <
https://trac.webkit.org/changeset/252521
>
WebKit Commit Bot
Comment 13
2019-11-15 20:13:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug