Tools/TestWebKitAPI/Tests/WebKit/GetUserMedia.mm
@@ -37,6 +37,8 @@
 #import <WebKit/WKWebView.h>
 #import <WebKit/WKWebViewConfiguration.h>
 #import <WebKit/_WKProcessPoolConfiguration.h>
+#import <wtf/text/StringBuilder.h>
+#import <wtf/text/WTFString.h>
 
 static bool done;
 
@@ -70,14 +72,42 @@ static bool done;
 
 namespace TestWebKitAPI {
 
-void waitUntilCaptureState(WKWebView *webView, _WKMediaCaptureState expectedState)
+static String wkMediaCaptureStateString(_WKMediaCaptureState flags)
 {
+    StringBuilder string;
+    if (flags & _WKMediaCaptureStateActiveMicrophone)
+        string.append("_WKMediaCaptureStateActiveMicrophone + ");
+    if (flags & _WKMediaCaptureStateActiveCamera)
+        string.append("_WKMediaCaptureStateActiveCamera + ");
+    if (flags & _WKMediaCaptureStateMutedMicrophone)
+        string.append("_WKMediaCaptureStateMutedMicrophone + ");
+    if (flags & _WKMediaCaptureStateMutedCamera)
+        string.append("_WKMediaCaptureStateMutedCamera + ");
+    if (string.isEmpty())
+        string.append("_WKMediaCaptureStateNone");
+    else
+        string.resize(string.length() - 2);
+
+    return string.toString();
+}
+
+bool waitUntilCaptureState(WKWebView *webView, _WKMediaCaptureState expectedState)
+{
+    NSTimeInterval end = [[NSDate date] timeIntervalSinceReferenceDate] + 10;
+    _WKMediaCaptureState state;
     do {
-        auto state = [webView _mediaCaptureState];
+        state = [webView _mediaCaptureState];
         if (state == expectedState)
-            return;
+            return true;
+
         TestWebKitAPI::Util::spinRunLoop(1);
+        
+        if ([[NSDate date] timeIntervalSinceReferenceDate] > end)
+            break;
     } while (true);
+
+    NSLog(@"Expected state %s, but after 10 seconds state is %s", wkMediaCaptureStateString(expectedState).utf8().data(), wkMediaCaptureStateString(state).utf8().data());
+    return false;
 }
 
 TEST(WebKit2, CaptureMute)
@@ -93,38 +123,38 @@ TEST(WebKit2, CaptureMute)
     webView.UIDelegate = delegate.get();
 
     [webView loadTestPageNamed:@"getUserMedia"];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateActiveCamera);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateActiveCamera));
 
     [webView _setPageMuted: _WKMediaCaptureDevicesMuted];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateMutedCamera);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateMutedCamera));
     [webView _setPageMuted: _WKMediaNoneMuted];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateActiveCamera);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateActiveCamera));
 
     [webView stringByEvaluatingJavaScript:@"stop()"];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateNone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateNone));
 
     [webView stringByEvaluatingJavaScript:@"captureAudio()"];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateActiveMicrophone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateActiveMicrophone));
     [webView _setPageMuted: _WKMediaCaptureDevicesMuted];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateMutedMicrophone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateMutedMicrophone));
     [webView _setPageMuted: _WKMediaNoneMuted];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateActiveMicrophone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateActiveMicrophone));
 
     [webView _setPageMuted: _WKMediaCaptureDevicesMuted];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateMutedMicrophone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateMutedMicrophone));
 
     [webView stringByEvaluatingJavaScript:@"stop()"];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateNone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateNone));
 
     [webView stringByEvaluatingJavaScript:@"captureAudioAndVideo()"];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateActiveCamera | _WKMediaCaptureStateActiveMicrophone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateActiveCamera | _WKMediaCaptureStateActiveMicrophone));
     [webView _setPageMuted: _WKMediaCaptureDevicesMuted];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateMutedCamera | _WKMediaCaptureStateMutedMicrophone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateMutedCamera | _WKMediaCaptureStateMutedMicrophone));
     [webView _setPageMuted: _WKMediaNoneMuted];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateActiveCamera | _WKMediaCaptureStateActiveMicrophone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateActiveCamera | _WKMediaCaptureStateActiveMicrophone));
 
     [webView stringByEvaluatingJavaScript:@"stop()"];
-    waitUntilCaptureState(webView, _WKMediaCaptureStateNone);
+    EXPECT_TRUE(waitUntilCaptureState(webView, _WKMediaCaptureStateNone));
 }
 
 #if WK_HAVE_C_SPI
